# dashboard-flask-uab

./: pyproject.toml  run.py
container/: docker-compose.yml
dashboard-app/app/: __init__.py
src/: config.py
src/app/: __init__.py
