[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-admin>=2.1.0",
    "flask-appbuilder>=5.2.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "pymysql>=1.1.3",
]
